# avion-messager-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: anim.rs  auth.rs  autostart.rs  calendar.rs  client_config.rs  google.rs  main.rs  notify.rs  overlay_win.rs  pkce.rs  scheduler.rs  settings.rs  sprite.rs  token_store.rs  tray.rs  update.rs
wix/: main.wxs  make_ico.py
