[package]
name = "avion-messager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
keyring = { version = "3", features = ["windows-native"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
ab_glyph = "0.2"
dirs = "5"
winreg = "0.52"
tray-icon = "0.19"
muda = "0.15"
tauri-winrt-notification = "0.7"
log = "0.4"
env_logger = "0.11"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_System_LibraryLoader",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
